homeworks/kalinovsky/module-03/lesson-07/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - port: 8080
      targetPort: 8000
